Teletıp stm Ekranı eklendi

--- a/guneyteletipUI/src/app/Features/Private/Definitions/Pages/role/role.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Definitions/Pages/role/role.component.html
@@ -13,7 +13,7 @@
   </div>-->
       <div class="row mb-3">
         <div class="col">
-          <app-rolegrid [filterData]="roleFilterComponent?.roleNameOutput"></app-rolegrid>
+          <app-rolegrid></app-rolegrid>
         </div>
       </div>
 
