--- a/guneyteletipUI/src/app/Features/Private/Definitions/Pages/role/roletabs/roletabs.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Definitions/Pages/role/roletabs/roletabs.component.html
@@ -1,15 +1,127 @@
 <div>
   <tabset>
     <tab heading="Rol Detay" id="tab1">
-      Where is Lorem Ipsum?
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+      <div class="row">
+        <div class="col-4">
+          <div class="container my-4 pull-left">
+            <p class="font-weight-bold">İşlem Yetkileri</p>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item p-1">
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="check11">
+                  <label class="custom-control-label" for="check11">Check me</label>
+                </div>
+              </li>
+              <li class="list-group-item p-1">
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="check12">
+                  <label class="custom-control-label" for="check12">Check me</label>
+                </div>
+              </li>
+              <li class="list-group-item p-1">
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="check13">
+                  <label class="custom-control-label" for="check13">Check me</label>
+                </div>
+              </li>
+              <li class="list-group-item p-1">
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="check14">
+                  <label class="custom-control-label" for="check14">Check me</label>
+                </div>
+              </li>
+              <li class="list-group-item p-1">
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="check15">
+                  <label class="custom-control-label" for="check15">Check me</label>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="container my-4 pull-left">
+            <p class="font-weight-bold">Tanımlama Yetkileri</p>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item p-1">
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="check21">
+                  <label class="custom-control-label" for="check21">Check me</label>
+                </div>
+              </li>
+              <li class="list-group-item p-1">
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="check22">
+                  <label class="custom-control-label" for="check22">Check me</label>
+                </div>
+              </li>
+              <li class="list-group-item p-1">
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="check23">
+                  <label class="custom-control-label" for="check23">Check me</label>
+                </div>
+              </li>
+              <li class="list-group-item p-1">
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="check24">
+                  <label class="custom-control-label" for="check24">Check me</label>
+                </div>
+              </li>
+              <li class="list-group-item p-1">
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="check25">
+                  <label class="custom-control-label" for="check25">Check me</label>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="container my-4 pull-left">
+            <p class="font-weight-bold">Ayar Yetkileri</p>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item p-1">
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="check31">
+                  <label class="custom-control-label" for="check1">Check me</label>
+                </div>
+              </li>
+              <li class="list-group-item p-1">
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="check32">
+                  <label class="custom-control-label" for="check2">Check me</label>
+                </div>
+              </li>
+              <li class="list-group-item p-1">
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="check33">
+                  <label class="custom-control-label" for="check3">Check me</label>
+                </div>
+              </li>
+              <li class="list-group-item p-1">
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="check34">
+                  <label class="custom-control-label" for="check4">Check me</label>
+                </div>
+              </li>
+              <li class="list-group-item p-1">
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="check35">
+                  <label class="custom-control-label" for="check5">Check me</label>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
     </tab>
-    <tab heading="Tab 2">
-      Where is Lorem Ipsum?
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Where is Lorem Ipsum?
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Where is Lorem Ipsum?
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-    </tab>
+    <!--<tab heading="Tab 2">
+    Where is Lorem Ipsum?
+    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Where is Lorem Ipsum?
+    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Where is Lorem Ipsum?
+    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+  </tab>-->
   </tabset>
 </div>
 
