--- a/guneyteletipUI/src/app/Features/Private/Definitions/Pages/user/usertabs/usertabs.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Definitions/Pages/user/usertabs/usertabs.component.html
@@ -1,7 +1,7 @@
-<div>
+<div class="shadow rounded-0">
   <tabset>
     <tab heading="Rol Seçimi" id="tabRole">
-      <div class="content mt-5">
+      <div class="content mt-5 pb-5">
         <div class="form-group row m-1">
           <div class="col-sm-3"></div>
           <label class="font-weight-bold">Rol Seçimi</label>
@@ -24,8 +24,8 @@
       </div>
     </tab>
     <tab heading="Hastane Seçimi" id="tabTenant">
-      <div class="content mt-5">
-        <div class="form-group row m-1">
+      <div class="content mt-5 pb-5">
+        <div class="form-group row m-1 ">
           <div class="col-sm-3"></div>
           <label class="font-weight-bold">Hastane Seçimi</label>
           <div class="col-sm-4">
