--- a/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosfilter/kosfilter.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosfilter/kosfilter.component.html
@@ -18,7 +18,7 @@
                  autocomplete="off"
                  name="dateRange"
                  [(ngModel)]="dateRange"
-                 placeholder="Tarih Aralığı" [bsConfig]="{ isAnimated: true, dateInputFormat: 'DD/MM/YYYY', rangeInputFormat : 'DD/MM/YYYY'}" #drp="bsDaterangepicker" bsDaterangepicker >
+                 placeholder="Tarih Aralığı" [bsConfig]="{ isAnimated: true, dateInputFormat: 'DD/MM/YYYY', rangeInputFormat : 'DD/MM/YYYY', containerClass: 'theme-dark-blue'}" #drp="bsDaterangepicker" bsDaterangepicker >
         </div>
         
       </div>
