--- a/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosstatistic/kosstatistic.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosstatistic/kosstatistic.component.html
@@ -1,10 +1,10 @@
-<div class="card mt-2 shadow bg-white rounded">
+<div class="card mt-2 shadow bg-white rounded-0">
   <div class="card-header p-1">
-    <fa name="bar-chart"></fa>
+    <fa name="bar-chart align-middle"></fa>
     İstatistikler
-    <div class="pull-right mr-1">
-      <button (click)="onRefresh()" class="btn btn-sm btn-light p-0 m-0" style="height: 1.5rem; width:2rem">
-        <fa name="refresh"></fa>
+    <div class="pull-right align-middle">
+      <button (click)="onRefresh()" class="btn btn-sm btn-light align-middle" style="height: 1.3rem; width:1.6rem">
+        <fa name="refresh " class="align-middle p-0"></fa>
       </button>
     </div>
   </div>
