--- a/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kostabs/kostabs.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kostabs/kostabs.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="shadow rounded-0">
   <tabset>
     <tab heading="Kos Detay" id="tab1">
       <app-kosdetail [kosId]="kosID"></app-kosdetail>
