--- a/guneyteletipUI/src/app/Features/Private/Definitions/Modals/editrole/editrole.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Definitions/Modals/editrole/editrole.component.html
@@ -1,33 +1,33 @@
 <div class="modal-header">
   <h4 class="modal-title pull-left">{{modalTitle}}</h4>
-  <button type="button" class="close pull-right" aria-label="Close" (click)="modal.onClose('carpi')">
+  <button type="button" class="close pull-right" aria-label="Close" (click)="cancel('carpi')">
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
 <div class="modal-body">
   <form>
-    <div class="form-group row m-1" *ngIf="false">
+    <div class="form-group row m-1" *ngIf="idVisible">
       <label class="col-sm-4 col-form-label">Role ID : </label>
       <div class="col-sm-8">
-        <input type="number" class="form-control" name="id" disabled>
+        <input type="number" class="form-control" name="id" [(ngModel)]="saveRolModel.id" disabled>
       </div>
     </div>
     <div class="form-group row m-1">
       <label class="col-sm-4 col-form-label">Role Adı : </label>
       <div class="col-sm-8">
-        <input type="text" class="form-control" name="AdSoyad">
+        <input type="text" class="form-control" name="AdSoyad" [(ngModel)]="saveRolModel.rolAdi">
       </div>
     </div>
-    <div class="form-group row m-1">
-      <label class="col-sm-4 col-form-label">Görünen Ad : </label>
-      <div class="col-sm-8">
-        <input type="text" class="form-control" name="AdSoyad">
-      </div>
+    <!--<div class="form-group row m-1">
+    <label class="col-sm-4 col-form-label">Görünen Ad : </label>
+    <div class="col-sm-8">
+      <input type="text" class="form-control" name="AdSoyad">
     </div>
+  </div>-->
     <div class="form-group row m-1">
       <label class="col-sm-4 col-form-label">Açıklama : </label>
       <div class="col-sm-8">
-        <input type="text" class="form-control" name="AdSoyad">
+        <input type="text" class="form-control" name="AdSoyad" [(ngModel)]="saveRolModel.aciklama">
       </div>
     </div>
     <div class="form-group row m-1">
@@ -40,6 +40,6 @@
   </form>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-danger" (click)="modal.onClose('close')">İptal</button>
-  <button type="button" class="btn btn-success" (click)="modal.onClose('save')">Kaydet</button>
+  <button type="button" class="btn btn-danger" (click)="cancel('cancel')">İptal</button>
+  <button type="button" class="btn btn-success" (click)="save()">Kaydet</button>
 </div>
