--- a/guneyteletipUI/src/app/Features/Private/Definitions/Pages/user/user.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Definitions/Pages/user/user.component.html
@@ -8,12 +8,12 @@
       </div>
       <div class="row mb-3">
         <div class="col">
-          <app-userfilter></app-userfilter>
+          <app-userfilter (username)="getFilter($event)"></app-userfilter>
         </div>
       </div>
       <div class="row mb-3">
         <div class="col">
-          <app-usergrid [filterValue]="userFilterComponent?.userNameOutput"></app-usergrid>
+          <app-usergrid [filterValue]="filterValue"></app-usergrid>
         </div>
       </div>
 
