--- a/guneyteletipUI/src/app/Features/Public/Login/Pages/login/login.component.css
+++ b/guneyteletipUI/src/app/Features/Public/Login/Pages/login/login.component.css
@@ -10,11 +10,10 @@
   font-weight: bold;
   font-size: large;
   color: gainsboro;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+ 
 }
 .labelText {
   color: gainsboro;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 .footerClass {
   position: fixed;
@@ -29,7 +28,7 @@
 .body {
   height: 100%;
   background: #007bff;
-  background: linear-gradient(to right, #650000, #bd7201 );
+  background: linear-gradient(to right, #000080, #9E9E9E );
 }
 
 .card-signin {
@@ -125,3 +124,37 @@
   }
 }
 
+.footerClass {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: black;
+  color: white;
+  text-align: center;
+  opacity: 0.5;
+}
+.loginbox {
+  width: auto !important;
+  height: auto !important;
+}
+img {
+  width: 300px;
+  height: 150px;
+}
+@media screen and (max-height: 950px) {
+  .loginbox {
+    height: 400px !important;
+    padding: 0;
+    margin-top: 0;
+    margin-bottom: 10px !important;
+  }
+  img {
+    width: 200px;
+    height: 100px;
+  }
+  .footerClass {
+    font-size: small;
+    height: 100px;
+  }
+}
