--- a/guneyteletipUI/src/app/Shared/Components/filter/filter.component.css
+++ b/guneyteletipUI/src/app/Shared/Components/filter/filter.component.css
@@ -1,5 +1,9 @@
-.label {
-  font-weight: bold;
-  font-size: large;
-  margin: 0.3rem;
+.buttonCollapse{
+  margin:0;
+  padding-left:10px;
+  padding-right:10px;
+  padding-bottom:0;
+  padding-top:0;
+  width:15px;
+  height:15px;
 }
