--- a/guneyteletipUI/src/app/Shared/Pages/sidetest/sidetest.component.html
+++ b/guneyteletipUI/src/app/Shared/Pages/sidetest/sidetest.component.html
@@ -1,47 +1,63 @@
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
 
 
-<nav class="navbar navbar-expand navbar-light bg-default shadow" style="height: 40px!important">
+<nav class="fixed-top navbar navbar-expand navbar-light shadow textClass" style="height: 40px!important; background-color: white; overflow-y:hidden!important ; z-index:2000!important;">
   <div style="width: 250px;">
     <a routerLink=""><img src="./././assets/img/logo.png" /></a>
   </div>
-  <button (click)="toggle()" id="menu-toggle" class="btn btn-light">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  <a (click)="toggle()" id="menu-toggle" class="toggleButton">
+    <span class="navbar-toggler-icon" style="width:30px; height:30px;"></span>
+  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse textColor" id="navbarsExample02">
-    <ul class="navbar-nav mr-auto textColor">
-      <li class="nav-item active textColor"> <a class="nav-link textColor" href="#">Home <span class="sr-only">(current)</span></a> </li>
-      <li class="nav-item textColor"> <a class="nav-link textColor" href="#">Link</a> </li>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent" style="z-index:1000;">
+    <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+      <li class="nav-item dropdown">
+        <label style="padding-top:5px;">
+          M.Mert AĞAOĞLU (Admin) 
+          <img src="././././assets/img/avatar.png" alt="Avatar" class="avatar">
+        </label>
+        <!--<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+     aria-haspopup="true" aria-expanded="false">
+    M.Mert AĞAOĞLU (Admin)
+  </a>-->
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Ayarlar</a>
+          <a class="dropdown-item" href="#">Seçenekler</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item bg-danger" (click)="logout()">Çıkış</a>
+        </div>
+      </li>
     </ul>
-    <form class="form-inline my-2 my-md-0"> </form>
   </div>
 </nav>
-<div id="wrapper" [ngClass]="{'toggled' : collapse}">
-  <!-- Sidebar -->
+
+<div id="wrapper" class="textClass" [ngClass]="{'toggled' : collapse}" style="padding-top:30px; min-height:85%;" (scroll)="onWindowScroll($event);">
+  <!-- Sidebar (scroll)="onWindowScroll($event);"-->
   <div id="sidebar-wrapper">
-    <ul class="sidebar-nav">
+    <ul class="sidebar-nav pt-2">
       <li>
         <div>
-          <button class="btn bgColor btn-block text-left rounded-0 p-3" data-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample1">
+          <button (click)="toggleInSide()" class="btn bgColor btn-block text-left rounded-0 p-3" data-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample1">
             <fa name="exchange" class="textColor"></fa>
-            <span class="pl-3 textColor">
+            <span class="pl-4 textColor">
               İşlemler
             </span>
           </button>
-          <div class="collapse bgColor " id="collapseExample1">
+          <div *ngIf="collapse" class="collapse bgColor " id="collapseExample1">
             <div class="card card-body p-0 rounded-0 bgColor">
               <ul class="list-group list-group-flush bgColor textColor">
                 <li class="list-group-item p-0 m-0 bgColor textColor">
                   <a routerLink="/operations/kos"><fa name="angle-right"></fa> KOS İşlemleri</a>
                 </li>
                 <li class="list-group-item p-0 m-0 bgColor textColor">
-                  <a routerLink="/definitions/jobs"><fa name="angle-right"></fa> Arka Plan İşleri</a>
+                  <a routerLink="/operations/jobs"><fa name="angle-right"></fa> Arka Plan İşleri</a>
+                </li>
+                <li class="list-group-item p-0 m-0 bgColor textColor">
+                  <a routerLink="/operations/stm"><fa name="angle-right"></fa> Arka Plan İşleri</a>
                 </li>
               </ul>
             </div>
@@ -50,17 +66,18 @@
       </li>
       <li>
         <div>
-          <button class="btn btn-block text-left rounded-0 bgColor p-3" data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample2">
+          <button (click)="toggleInSide()" class="btn btn-block text-left rounded-0 bgColor p-3" data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample2">
             <fa name="user" class="textColor"></fa>
-            <span class="pl-3 textColor">
+            <span class="pl-4 textColor">
               Tanımlamalar
             </span>
           </button>
-          <div class="collapse bgColor" id="collapseExample2">
+          <div *ngIf="collapse" class="collapse bgColor" id="collapseExample2">
             <div class="card card-body p-0 rounded-0 bgColor">
               <ul class="list-group list-group-flush bgColor">
                 <li class="list-group-item p-0 m-0 bgColor v">
-                  <a routerLink="/definitions/user" class="m-0 p-0"><fa name="angle-right"></fa> Kullanıcı Tanımlama</a></li>
+                  <a routerLink="/definitions/user" class="m-0 p-0"><fa name="angle-right"></fa> Kullanıcı Tanımlama</a>
+                </li>
                 <li class="list-group-item p-0 m-0 bgColor textColor">
                   <a routerLink="/definitions/role"><fa name="angle-right"></fa> Rol Tanımlama</a>
                 </li>
@@ -71,13 +88,13 @@
       </li>
       <li>
         <div>
-          <button class="btn btn-block text-left rounded-0 bgColor p-3" data-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false" aria-controls="collapseExample3">
+          <button (click)="toggleInSide()" class="btn btn-block text-left rounded-0 bgColor p-3" data-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false" aria-controls="collapseExample3">
             <fa name="cogs" class="textColor"></fa>
-            <span class="pl-3 textColor">
+            <span class="pl-4 textColor">
               Ayarlar
             </span>
           </button>
-          <div class="collapse bgColor" id="collapseExample3">
+          <div *ngIf="collapse" class="collapse bgColor" id="collapseExample3">
             <div class="card card-body p-0 rounded-0 bgColor">
               <ul class="list-group list-group-flush bgColor">
                 <li class="list-group-item p-0 m-0 bgColor textColor"><a routerLink=""><fa name="angle-right"></fa> Kos Ayarlar</a></li>
@@ -87,20 +104,48 @@
             </div>
           </div>
         </div>
-      </li> 
+      </li>
+      <li>
+        <div>
+          <button (click)="logout()" class="btn btn-block text-left rounded-0 bgColor p-3">
+            <fa name="sign-out" style="color:red;"></fa>
+            <span class="pl-4" style="color:red;">
+              Çıkış
+            </span>
+          </button>
+        </div>
+      </li>
     </ul>
-   
-  </div> <!-- /#sidebar-wrapper -->
-  <!-- Page Content -->
-  <div id="page-content-wrapper">
-    <div class="container-fluid">
-     <router-outlet></router-outlet>
+  </div>
+  <div id="page-content-wrapper" class="p-0" >
+    <div class="p-0 shadow-lg dekorCard"></div>
+    <div class="container-fluid routerField">
+      <router-outlet></router-outlet>
     </div>
-  </div> <!-- /#page-content-wrapper -->
-</div> <!-- /#wrapper -->
-<!-- Bootstrap core JavaScript -->
+  </div>
+
+</div>
+<div class="container-fluid footerClass textClass">
+  <footer class="page-footer font-small teal pt-4 bordered" style="background-color: lightgray;">
+    <div class="container pb-4">
+      <div class="row">
+        <div class="col border-right border-dark text-right">
+          <p class="m-0">Radbil İletisim  : <span class="text-primary">0(222) 444 11 33</span> </p>
+          <p class="m-0">XYZ Mah , ABC Sk No: 3.14 </p>
+          <p class="m-0">KOCAELİ/GEBZE  </p>
+        </div>
+        <div class="col text-left">
+          <p class="m-0"></p>
+          <p class="m-0">By@Protek Saglik bilisim </p>
+          <p class="m-0">Teknik iletisim : <span class="text-primary">Protek Saglik bilisim </span> </p>
+          <p class="m-0">Versiyon : <span class="text-primary"> 0.0.0.0</span></p>
+        </div>
+      </div>
+    </div>
+  </footer>
+</div>
 <script src="js/jquery.min.js"></script>
-<script src="js/bootstrap.bundle.min.js"></script> <!-- Menu Toggle Script -->
+<script src="js/bootstrap.bundle.min.js"></script>
 
 
- 
+
