--- a/guneyteletipUI/src/app/Shared/Pages/sidetest/sidetest.component.html
+++ b/guneyteletipUI/src/app/Shared/Pages/sidetest/sidetest.component.html
@@ -57,7 +57,7 @@
                   <a routerLink="/operations/jobs"><fa name="angle-right"></fa> Arka Plan İşleri</a>
                 </li>
                 <li class="list-group-item p-0 m-0 bgColor textColor">
-                  <a routerLink="/operations/stm"><fa name="angle-right"></fa> Arka Plan İşleri</a>
+                  <a routerLink="/operations/stm"><fa name="angle-right"></fa> Teletıp STM İşlemleri</a>
                 </li>
               </ul>
             </div>
