--- a/guneyteletipUI/src/app/Features/Private/Operations/Pages/teletipstm/stmgrid/stmgrid.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Operations/Pages/teletipstm/stmgrid/stmgrid.component.html
@@ -20,10 +20,10 @@
     <table #filterSection class="table table-bordered m-0 medlifeGrid">
       <thead>
         <tr>
-          <th scope="col" class="p-0" style="width: 25px;">
-            <input type="checkbox" class="m-1" (click)="gridStm.gridSelect($event,'selectPage')" [(ngModel)]="gridStm.selectPage" title="Sayfayı Seç">
-            <input type="checkbox" class="m-1" (click)="gridStm.gridSelect($event,'selectAll')" [(ngModel)]="gridStm.selectAll" title="Tümünü Seç">
-          </th>
+          <!--<th scope="col" class="p-0" style="width: 25px;">
+    <input type="checkbox" class="m-1" (click)="gridStm.gridSelect($event,'selectPage')" [(ngModel)]="gridStm.selectPage" title="Sayfayı Seç">
+    <input type="checkbox" class="m-1" (click)="gridStm.gridSelect($event,'selectAll')" [(ngModel)]="gridStm.selectAll" title="Tümünü Seç">
+  </th>-->
           <th scope="col" class="p-0" (click)="gridStm.onSorting('id')">ID<fa name="sort" class="ml-1"></fa></th>
           <th scope="col" class="p-0" (click)="gridStm.onSorting('citizenid')">citizenid<fa name="sort" class="ml-1"></fa></th>
           <th scope="col" class="p-0" (click)="gridStm.onSorting('fkTenant')">fkTenant<fa name="sort" class="ml-1"></fa></th>
@@ -48,41 +48,41 @@
       </thead>
       <tbody>
         <tr (click)="gridStm.onClickItem(item)" *ngFor="let item of gridStm.data.list" [class]="gridStm.getRowClass(item)">
-          <td class="p-0">
-            <input type="checkbox" class="m-1" [checked]="gridStm.isSelected(item)"
-                   (change)="gridStm.onSelectItem(item)" [disabled]="gridStm.selectAll">
-          </td>
-          <td class="p-0">{{item.id}}</td>
-          <td class="p-0">{{item.citizenid}}</td>
-          <td class="p-0">{{item.fkTenant}}</td>
-          <td class="p-0">{{item.tenantName}}</td>
-          <td class="p-0">{{item.fkInfBatch}}</td>
-          <td class="p-0">{{item.fkKosStudy}}</td>
-          <td class="p-0">{{item.accessionnumber}}</td>
-          <td class="p-0">{{item.teletipstatus}}</td>
-          <td class="p-0">{{item.medulastatus}}</td>
-          <td class="p-0">{{item.wadostatus}}</td>
-          <td class="p-0">{{item.reportstatus}}</td>
-          <td class="p-0">{{item.dosestatus}}</td>
-          <td class="p-0">{{item.sutcode}}</td>
-          <td class="p-0">{{item.lastmedulasenddate  | date : 'dd.MM.yyyy'}}</td>
-          <td class="p-0">{{item.medularesponsecode}}</td>
-          <td class="p-0">{{item.medularesponsemessage}}</td>
-          <td class="p-0">{{item.scheduledate | date : 'dd.MM.yyyy'}}</td>
-          <td class="p-0">{{item.performeddate | date : 'dd.MM.yyyy'}}</td>
-          <td class="p-0">{{item.error}}</td>
-          <td class="p-0">{{item.patienthistorysearchstatus}}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="row justify-content-center mt-2">
-    <div class="col-sm-7 pagination-sm  justify-content-center pageNumber">
-      <pagination class="justify-content-center mb-0" [boundaryLinks]="true" [totalItems]="gridStm.data.totalCount" [maxSize]="4" [(ngModel)]="gridStm.model.paging.pageNumber" [itemsPerPage]="gridStm.model.paging.count" (pageChanged)="gridStm.onPageChanged($event)" previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
-      </pagination>
+          <!--<td class="p-0">
+              <input type="checkbox" class="m-1" [checked]="gridStm.isSelected(item)"
+                     (change)="gridStm.onSelectItem(item)" [disabled]="gridStm.selectAll">
+            </td>-->
+            <td class="p-0">{{item.id}}</td>
+            <td class="p-0">{{item.citizenid}}</td>
+            <td class="p-0">{{item.fkTenant}}</td>
+            <td class="p-0">{{item.tenantName}}</td>
+            <td class="p-0">{{item.fkInfBatch}}</td>
+            <td class="p-0">{{item.fkKosStudy}}</td>
+            <td class="p-0">{{item.accessionnumber}}</td>
+            <td class="p-0">{{item.teletipstatus}}</td>
+            <td class="p-0">{{item.medulastatus}}</td>
+            <td class="p-0">{{item.wadostatus}}</td>
+            <td class="p-0">{{item.reportstatus}}</td>
+            <td class="p-0">{{item.dosestatus}}</td>
+            <td class="p-0">{{item.sutcode}}</td>
+            <td class="p-0">{{item.lastmedulasenddate  | date : 'dd.MM.yyyy'}}</td>
+            <td class="p-0">{{item.medularesponsecode}}</td>
+            <td class="p-0">{{item.medularesponsemessage}}</td>
+            <td class="p-0">{{item.scheduledate | date : 'dd.MM.yyyy'}}</td>
+            <td class="p-0">{{item.performeddate | date : 'dd.MM.yyyy'}}</td>
+            <td class="p-0">{{item.error}}</td>
+            <td class="p-0">{{item.patienthistorysearchstatus}}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="row justify-content-center mt-2">
+      <div class="col-sm-7 pagination-sm  justify-content-center pageNumber">
+        <pagination class="justify-content-center mb-0" [boundaryLinks]="true" [totalItems]="gridStm.data.totalCount" [maxSize]="4" [(ngModel)]="gridStm.model.paging.pageNumber" [itemsPerPage]="gridStm.model.paging.count" (pageChanged)="gridStm.onPageChanged($event)" previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
+        </pagination>
+      </div>
     </div>
   </div>
-</div>
 
 
 
