Kos istatistik değerleri filtreye göre listelendi

--- a/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosoperations.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosoperations.component.html
@@ -16,7 +16,7 @@
           <app-kosgrid [filter]="filterData"></app-kosgrid>
         </div>
         <div class="col-md-3 marginClass">
-          <app-kosstatistic></app-kosstatistic>
+          <app-kosstatistic [filter]="filterData"></app-kosstatistic>
         </div>
       </div>
 
