Export excel fonsiyonu aktif edildi.

--- a/guneyteletipUI/src/app/Features/Private/Operations/Pages/jobs/jobsfilter/jobsfilter.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Operations/Pages/jobs/jobsfilter/jobsfilter.component.html
@@ -8,7 +8,7 @@
                  autocomplete="off"
                  [(ngModel)]="filterData.dateRange"
                  name="dateRange"
-                 placeholder="Tarih Aralığı" [bsConfig]="{ isAnimated: true, dateInputFormat: 'DD/MM/YYYY'}" #drp="bsDaterangepicker" bsDaterangepicker>
+                 placeholder="Tarih Aralığı" [bsConfig]="{ isAnimated: true, dateInputFormat: 'DD/MM/YYYY' , containerClass: 'theme-dark-blue'}" #drp="bsDaterangepicker" bsDaterangepicker>
         </div>
       </div>
       <div class="col-md-4">
