--- a/guneyteletipUI/src/app/Shared/Pages/sidetest/sidetest.component.html
+++ b/guneyteletipUI/src/app/Shared/Pages/sidetest/sidetest.component.html
@@ -17,7 +17,7 @@
     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
       <li class="nav-item dropdown">
         <label style="padding-top:5px;">
-          M.Mert AĞAOĞLU (Admin) 
+          {{userName}}
           <img src="././././assets/img/avatar.png" alt="Avatar" class="avatar">
         </label>
         <!--<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
